# 2d-gaussian-splatting

./: .gitignore  .gitmodules  2d_segment.py  camera.py  convert_new.py  convert_with_camera.py  edit_object_removal.py  filename  gaussian.py  gif.py  paper.npy  render.py  render_segment.py  seg.py  train.py  train2.py
arguments/: __init__.py
code/: README.md  bending_gt.npy  setup.py  test.py  visualization.py
code/cpp/: CMakeLists.txt
code/cpp/basic/include/: config.hpp
code/cpp/basic/src/: log.cpp  sparse_matrix.cpp
code/cpp/deformable/include/: deformable_surface_simulator.hpp
code/cpp/deformable/src/: stretching_and_shearing.cpp
config/object_removal/: bear.json
conv/: auto_judge.py  pyproject.toml  simulation.py  texture.py  visualization.py
conv/cloth_backend.egg-info/: SOURCES.txt
conv/cpp/: main.cpp
conv/cpp/basic/include/: log.hpp  sparse_matrix.hpp
conv/cpp/deformable/src/: bending.cpp  simulator.cpp
gaussian_renderer/: __init__.py
input/distorted/sparse/0/: project.ini
input/stereo/: fusion.cfg  patch-match.cfg
phys_engine/: InertiaEnergy.py  MassSpringEnergy.py  mass_spring.py  render_mass_spring.py  s.cpp  t.py  time_integrator.py  utils.py
phys_engine/cpp/solid-sim-muda/: .gitmodules  CMakeLists.txt
phys_engine/cpp/solid-sim-muda/simulators/: CMakeLists.txt
phys_engine/cpp/solid-sim-muda/simulators/1_mass_spring/: CMakeLists.txt
phys_engine/cpp/solid-sim-muda/simulators/1_mass_spring/include/: InertialEnergy.h  device_uti.h  simulator.h  uti.h
phys_engine/cpp/solid-sim-muda/simulators/1_mass_spring/src/: GravityEnergy.cu  InertialEnergy.cu  MassSpringEnergy.cu  device_uti.cu  main.cpp  simulator.cu  square_mesh.cpp  uti.cu
phys_engine/cpp/solid-sim-muda/simulators/2_dirichlet/include/: GravityEnergy.h  device_uti.h
phys_engine/cpp/solid-sim-muda/simulators/2_dirichlet/src/: device_uti.cu
phys_engine/cpp/solid-sim-muda/simulators/binding/: CMakeLists.txt  simulator_bindings.cpp  test.cpp
scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
script/: edit_object_removal.bat  prepare_pseudo_label.bat  train.bat
utils/: camera_utils.py  image_utils.py  loss_utils.py  mcube_utils.py  mesh_utils.py  rotate_sh.py
